Create section features

--- a/index.html
+++ b/index.html
@@ -134,7 +134,37 @@
 
     </div>
 
-
+    <section id="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-xs-12 block">
+                    
+                    <div class="col-md-10 col-xs-10 text-center">
+                        <h4>Visión</h4> 
+                        <p>En el 2022, el Centro de Enseñanza automovilística EL PORTAL será altamente competitivo, confiable, y reconocida por ofrecer un servicio de formación de conductores de vehículos automotores competentes y con responsabilidad social.</p>
+                        <a href="#" class="readmore">Leer más<i class="fa fa-caret-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-xs-12 block">
+                  
+                    <div class="col-md-10 col-xs-10 text-center">
+                        <h4>Misión</h4>
+                        <p>Esta es una organización conformada con el fin de servir a la comunidad, a través de la preparación y formación de personas en conducción de vehículos automotores con las actitudes, habilidades y destrezas necesarias para una adecuada y responsable aplicación de sus conocimientos, de manera que no ponga en riesgo su vida, ni la de los demás.
+                            </p>
+                        <a href="#" class="readmore">Leer más <i class="fa fa-caret-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-xs-12 block">
+   
+                    <div class="col-md-10 col-xs-10 text-center">
+                        <h4>Política de calidad</h4>
+                        <p>Es una organización dedicada a la preparación y certificación de conductores íntegros y totalmente capacitados en conducción de vehículos automotores, que a través de un continuo mejoramiento y bajo el cumplimiento de los requisitos  legales y reglamentarios vigentes orientados a la satisfacción de los usuarios.</p>
+                        <a href="#" class="readmore">Leer más <i class="fa fa-caret-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="footer">
         <div class="container">
