Create section heading courses

--- a/index.html
+++ b/index.html
@@ -166,6 +166,39 @@
         </div>
     </section>
 
+    
+    <section id="about">
+        <div class="image-holder col-lg-6 col-md-6 col-sm-6 col-xs-12 pull-left">
+            <div class="background-imgholder">
+                <img src="img/1.jpg" alt="about" class="img-responsive" style="display:none;" />
+            </div>
+        </div>
+
+        <div class="container-fluid">
+
+            <div class="col-md-7 col-md-offset-6 col-sm-8 col-sm-offset-2 col-xs-12 text-inner ">
+                <div class="text-block">
+                    <div class="section-heading">
+                        <h1><span>CURSOS</span> DE:</h1>
+                    </div>
+                    <br>
+                    <ul class="aboutul">
+                        <li> <i class="fa fa-check"></i>CONDUCCIÓN DE CARRO Y MOTO</li>
+                        <li> <i class="fa fa-check"></i>SEGURIDAD VIAL</li>
+                        <li> <i class="fa fa-check"></i>MANEJO DEFENSIVO</li>
+                        <li> <i class="fa fa-check"></i>MECÁNICA BÁSICA</li>
+                        <li> <i class="fa fa-check"></i>PRIMEROS AUXILIOS</li>
+                        <li> <i class="fa fa-check"></i>CÓDIGO NACIONAL DE TRÁNSITO</li>
+                    </ul>
+
+                    <button type="button" class="btn btn-primary slide">Leer más  <i class="fa fa-caret-right"></i> </button>
+
+
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="footer">
         <div class="container">
             <div class="row">
