--- a/about/index.html
+++ b/about/index.html
@@ -68,7 +68,7 @@
                     <div id="navbar" class="collapse navbar-collapse navbar-right">
                         <ul class="nav navbar-nav">
                             <li><a href="../">Inicio</a></li>
-                            <li><a href="about.html">Cursos</a></li>
+                            <li><a href="../courses/">Cursos</a></li>
                             <li class="active"><a href="#">Sobre Nosotros</a></li>
                             <li><a href="contact.html">Contacto</a></li>
                         </ul>
