Create page contact

--- a/contact/index.html
+++ b/contact/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image" content="">
     <link rel="shortcut icon" href="">
 
-    <title>CEA EL PORTAL | Sobre Nosotros</title>
+    <title>CEA EL PORTAL | Contactenos</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/main.css">
@@ -69,8 +69,8 @@
                         <ul class="nav navbar-nav">
                             <li><a href="../">Inicio</a></li>
                             <li><a href="../courses/">Cursos</a></li>
-                            <li class="active"><a href="#">Sobre Nosotros</a></li>
-                            <li><a href="../contact/">Contacto</a></li>
+                            <li><a href="../about/">Sobre Nosotros</a></li>
+                            <li class="active"><a href="./">Contacto</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
@@ -90,9 +90,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-sm-8 col-xs-6">
-                        <h4>Sobre Nosotros</h4>
+                        <h4>Contactanos</h4>
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-6" style="text-align:right;">Inicio<span class="sep"> 	/ </span><span class="current"> Sobre Nosotros</span></div>
+                    <div class="col-md-4 col-sm-4 col-xs-6" style="text-align:right;">Inicio<span class="sep"> 	/ </span><span class="current"> Contacto</span></div>
                 </div>
             </div>
         </div>
@@ -100,33 +100,49 @@
         </div>
     </section>
 
+    <section id="contact">
+        <div class="overlay">
+            <div class="gmap-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-5">
+                            <div class="gmap">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.745211759931!2d-76.04319248524534!3d1.8471020986532662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e250bcba813a041%3A0x26c96c37a480fffb!2sCEA%20El%20PORTAL!5e0!3m2!1ses!2sco!4v1590191341069!5m2!1ses!2sco" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                            </div>
+                        </div>
+                        <div class="col-sm-7 map-content">
+                            <ul class="row">
+                                <li class="col-sm-6">
+                                    <address>
+									<h5>Escuela de conducción</h5>
+									<p>Dirección: Carrera 5 este Nº 6A - 08 <br>
+									Barrio: Portal del oriente Pitalito, Huila<br></p>
+                                        <p>Celular: 310 284 0995 <br>
+                                          Teléfono: 836 8545 <br>
+									Email: ceaelportal@gmail.com</p>
+								</address>
 
-    <section id="about-page-section-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-7 text-align">
-                    <div class="section-heading">
-                        <h2>Objetivos de <span>calidad</span></h2>
-                        <p class="subheading">Para el cumplimiento de nuestra política de calidad.</p>
+                                </li>
+                                <!-- <li class="col-sm-6">
+                                    <address>
+									<h5>Oficina principal</h5>
+									<p>Aspire Software Solutions <br>
+									202, Parishram Complex,<br>
+									Mithakhali Six Roads,<br>
+									Navrangpura, Ahmedabad,<br>
+									Gujarat, India. </p>
+									<p>Phone:+91 848 594 5080 <br>
+									Email Address:sales@aspiresoftware.in</p>
+								</address>
+
+                                </li> -->
+                            </ul>
+                        </div>
                     </div>
-                    <p>
-                        El CEA EL PORTAL orienta sus esfuerzos en el mantenimiento de los siguientes objetivos de calidad:<br><br>
-
-                            •	Ofrecer a nuestros usuarios el mejor servicio en enseñanza automovilística, con la más alta calidad en recursos humanos y materiales disponibles para la atención de nuestros usuarios.<br>
-                            •	Buscar las metodologías pedagógicas más adecuadas para brindar a nuestros usuarios mayor eficiencia y facilidad en su aprendizaje. <br>
-                            •	A través del sistema de gestión de calidad implementando y certificando asegurar la mejora continua de los procesos.<br>
-
-
-                    </p>
-                    <button type="button" class="btn btn-primary slide">Contactanos <i class="fa fa-caret-right"></i></button>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5">
-                    <img height="" width="auto" src="../img/portal.jpg" class="attachment-full img-responsive" alt="">
                 </div>
             </div>
         </div>
     </section>
-
 
     <section id="footer">
         <div class="container">
