--- a/courses/index.html
+++ b/courses/index.html
@@ -70,7 +70,7 @@
                             <li><a href="../">Inicio</a></li>
                             <li class="active"><a href="#">Cursos</a></li>
                             <li><a href="../about/">Sobre Nosotros</a></li>
-                            <li><a href="contact.html">Contacto</a></li>
+                            <li><a href="../contact/">Contacto</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
