Change info and add media query for title h1

--- a/contact/index.html
+++ b/contact/index.html
@@ -117,25 +117,25 @@
 									<h5>Escuela de conducción</h5>
 									<p>Dirección: Carrera 5 este Nº 6A - 08 <br>
 									Barrio: Portal del oriente Pitalito, Huila<br></p>
-                                        <p>Celular: 310 284 0995 <br>
+                                        <p>Celular: <a href="tel:3102840995">310 284 0995</a> <br>
                                           Teléfono: 836 8545 <br>
-									Email: ceaelportal@gmail.com</p>
+									Email: <a href="mailto:ceaelportal@gmail.com">ceaelportal@gmail.com</a></p>
 								</address>
 
                                 </li>
-                                <!-- <li class="col-sm-6">
+                                <li class="col-sm-6">
                                     <address>
-									<h5>Oficina principal</h5>
-									<p>Aspire Software Solutions <br>
-									202, Parishram Complex,<br>
-									Mithakhali Six Roads,<br>
-									Navrangpura, Ahmedabad,<br>
-									Gujarat, India. </p>
-									<p>Phone:+91 848 594 5080 <br>
-									Email Address:sales@aspiresoftware.in</p>
+									<h5>Rapigestiones del Sur</h5>
+									<p>Dirección: Carrera 1b n. 2-26 <br>
+                                    Frente al CDA pitalito<br>
+									Celular: <a href="tel:3202002717">320 200 2717</a><br>
+									<a href="tel:3103328651">310 332 8651</a><br>
+									<a href="tel:3124802276">312 480 2276</a> </p>
+									<p>Teléfono: 836 6437 <br>
+									Email: <a href="mailto:rapigestionesdelsur@gmail.com">rapigestionesdelsur@gmail.com</a></p>
 								</address>
 
-                                </li> -->
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-3 col-xs-12 block">
                     <div class="footer-block">
-                        <h4>CEA el Portal</h4>
+                        <h4>CEA EL PORTAL</h4>
                         <hr/>
                         <p>Centro y escuela de enseñanza automovilística en Pitalito Huila, formación integral de conductores, cursos de conducción de vehículos y motos, seguridad vial, manejo defensivo, código Nacional de tránsito, mecánica básica, primeros auxilios.</p>
                         <a href="#" class="learnmore">Leer más <i class="fa fa-caret-right"></i></a>
@@ -163,7 +163,6 @@
                         <ul class="footer-links">
                             <li><a href="#">Sobre Nosotros</a></li>
                             <li><a href="#">Cursos</a></li>
-                            <li><a href="#">Portfolio</a></li>
                             <li><a href="#">Contactenos</a></li>
                         </ul>
                     </div>
