--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-3 col-xs-12 block">
                     <div class="footer-block">
-                        <h4>CEA el Portal</h4>
+                        <h4>CEA EL PORTAL</h4>
                         <hr/>
                         <p>Centro y escuela de enseñanza automovilística en Pitalito Huila, formación integral de conductores, cursos de conducción de vehículos y motos, seguridad vial, manejo defensivo, código Nacional de tránsito, mecánica básica, primeros auxilios.</p>
                         <a href="#" class="learnmore">Leer más <i class="fa fa-caret-right"></i></a>
@@ -316,7 +316,6 @@
                         <ul class="footer-links">
                             <li><a href="#">Sobre Nosotros</a></li>
                             <li><a href="#">Cursos</a></li>
-                            <li><a href="#">Portfolio</a></li>
                             <li><a href="#">Contactenos</a></li>
                         </ul>
                     </div>
