Change info hours taller and developep

--- a/about/index.html
+++ b/about/index.html
@@ -200,7 +200,7 @@
                     <span>Copyright © 2020 Todos los derechos reservados.</span>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                   Sitio creado por <a href="#">StyvenSoft</a>
+                    Desarrollado por <a href="#">StyvenSoft</a>
                 </div>
             </div>
         </div>
