--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                                 <ul>
                                                     <li><strong>15</strong> Horas Prácticas</li>
                                                     <li><strong>25</strong> Horas Teóricas</li>
-                                                    <li><strong>3</strong> Horas de Mecánica Básica</li>
+                                                    <li><strong>3</strong> Horas de Taller</li>
                                                     <li><strong>10</strong> años de Vigencia </li>
                                                     <!-- <li><strong>Basic</strong> Stats</li> -->
                                                 </ul>
@@ -253,7 +253,7 @@
                                                 <ul>
                                                     <li><strong>20</strong> Horas Prácticas</li>
                                                     <li><strong>25</strong> Horas Teóricas</li>
-                                                    <li><strong>5</strong> Horas de Mecánica Básica</li>
+                                                    <li><strong>5</strong> Horas de Taller</li>
                                                     <li><strong>10</strong> años de Vigencia </li>
                                                     <!-- <li><b>Complex</b>&nbsp;Stats</li> -->
                                                 </ul>
@@ -278,7 +278,7 @@
                                                 <ul>
                                                     <li><strong>30</strong> Horas Prácticas</li>
                                                     <li><strong>30</strong> Horas Teóricas</li>
-                                                    <li><strong>5</strong> Horas de Mecánica Básica</li>
+                                                    <li><strong>5</strong> Horas de Taller</li>
                                                     <li><b>3</b> años servicio público</li>
                                                     <li><b>10</b> años servicio particular</li>
                                                 </ul>
@@ -369,7 +369,7 @@
                     <span>Copyright © 2020 Todos los derechos reservados.</span>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                   Sitio creado por <a href="#">StyvenSoft</a>
+                    Desarrollado por <a href="#">StyvenSoft</a>
                 </div>
             </div>
         </div>
