Update access links

--- a/about/index.html
+++ b/about/index.html
@@ -118,7 +118,7 @@
 
 
                     </p>
-                    <button type="button" class="btn btn-primary slide">Contactanos <i class="fa fa-caret-right"></i></button>
+                    <a class="btn btn-primary slide" href="../contact/">Contactanos <i class="fa fa-caret-right"></i></a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5">
                     <img height="" width="auto" src="../img/portal.jpg" class="attachment-full img-responsive" alt="">
@@ -145,9 +145,9 @@
                         <h4>Links Rápidos</h4>
                         <hr/>
                         <ul class="footer-links">
-                            <li><a href="#">Sobre Nosotros</a></li>
-                            <li><a href="#">Cursos</a></li>
-                            <li><a href="#">Contactenos</a></li>
+                            <li><a href="../about/">Sobre Nosotros</a></li>
+                            <li><a href="../courses/">Cursos</a></li>
+                            <li><a href="../contact/">Contactenos</a></li>
                         </ul>
                     </div>
                 </div>
@@ -159,8 +159,8 @@
                         <ul class="footer-links">
                             <li>Carrera 5 este Nº 6A - 08 </li>
                             <li>Portal del oriente Pitalito, Huila</li>
-                            <li>ceaelportal@gmail.com</li>
-                            <li>Cel. 310 2840995</li>
+                            <li><a href="mailto:ceaelportal@gmail.com">ceaelportal@gmail.com</a></li>
+                            <li><a href="tel:3102840995">Cel. 310 2840995</a></li>
                             <li>Tel. 8368545</li>
                         </ul>
                     </div>
