--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                 <div class="fill" style="background-image:url('img/banner-slide-1.jpg');"></div>
                 <div class="carousel-caption slide-up">
                     <h1 class="banner_heading">Formación <span>integral</span> de conductores</h1>
-                                       <div class="slider_btn">
-                        <button type="button" class="btn btn-default slide">Contactenos <i class="fa fa-caret-right"></i></button>
-                        <button type="button" class="btn btn-primary slide">Sobre Nosotros <i class="fa fa-caret-right"></i></button>
+                    <div class="slider_btn">
+                        <a class="btn btn-default slide" href="./contact/"> Contactenos</a> <i class="fa fa-caret-right"></i></a>
+                        <a class="btn btn-primary slide" href="./about/">Sobre Nosotros <i class="fa fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -105,9 +105,9 @@
                 <div class="fill" style="background-image:url('img/banner-slide-2.jpg');"></div>
                 <div class="carousel-caption slide-up">
                     <h1 class="banner_heading">cursos en <span>conducción </span> de vehículos y motos</h1>
-                               <div class="slider_btn">
-                        <button type="button" class="btn btn-default slide">Contactenos <i class="fa fa-caret-right"></i></button>
-                        <button type="button" class="btn btn-primary slide">Sobre Nosotros <i class="fa fa-caret-right"></i></button>
+                    <div class="slider_btn">
+                        <a class="btn btn-default slide" href="./contact/"> Contactenos</a> <i class="fa fa-caret-right"></i></a>
+                        <a class="btn btn-primary slide" href="./about/">Sobre Nosotros <i class="fa fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -116,9 +116,9 @@
                 <div class="fill" style="background-image:url('img/banner-slide-3.jpg');"></div>
                 <div class="carousel-caption slide-up">
                     <h1 class="banner_heading">Licencia <span>inicial</span>, Refrendación, Recategorización y Duplicado</h1>
-                      <div class="slider_btn">
-                        <button type="button" class="btn btn-default slide">Contactenos <i class="fa fa-caret-right"></i></button>
-                        <button type="button" class="btn btn-primary slide">Sobre Nosotros <i class="fa fa-caret-right"></i></button>
+                    <div class="slider_btn">
+                        <a class="btn btn-default slide" href="./contact/"> Contactenos</a> <i class="fa fa-caret-right"></i></a>
+                        <a class="btn btn-primary slide" href="./about/">Sobre Nosotros <i class="fa fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                     <div class="col-md-10 col-xs-10 text-center">
                         <h4>Visión</h4> 
                         <p>En el 2022, el Centro de Enseñanza automovilística EL PORTAL será altamente competitivo, confiable, y reconocida por ofrecer un servicio de formación de conductores de vehículos automotores competentes y con responsabilidad social.</p>
-                        <a href="#" class="readmore">Leer más<i class="fa fa-caret-right"></i></a>
+                        <a href="./about/" class="readmore">Leer más<i class="fa fa-caret-right"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4 col-xs-12 block">
@@ -152,7 +152,7 @@
                         <h4>Misión</h4>
                         <p>Esta es una organización conformada con el fin de servir a la comunidad, a través de la preparación y formación de personas en conducción de vehículos automotores con las actitudes, habilidades y destrezas necesarias para una adecuada y responsable aplicación de sus conocimientos, de manera que no ponga en riesgo su vida, ni la de los demás.
                             </p>
-                        <a href="#" class="readmore">Leer más <i class="fa fa-caret-right"></i></a>
+                        <a href="./about/" class="readmore">Leer más <i class="fa fa-caret-right"></i></a>
                     </div>
                 </div>
                 <div class="col-md-4 col-xs-12 block">
@@ -160,7 +160,7 @@
                     <div class="col-md-10 col-xs-10 text-center">
                         <h4>Política de calidad</h4>
                         <p>Es una organización dedicada a la preparación y certificación de conductores íntegros y totalmente capacitados en conducción de vehículos automotores, que a través de un continuo mejoramiento y bajo el cumplimiento de los requisitos  legales y reglamentarios vigentes orientados a la satisfacción de los usuarios.</p>
-                        <a href="#" class="readmore">Leer más <i class="fa fa-caret-right"></i></a>
+                        <a href="./about/" class="readmore">Leer más <i class="fa fa-caret-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                         <li> <i class="fa fa-check"></i>CÓDIGO NACIONAL DE TRÁNSITO</li>
                     </ul>
 
-                    <button type="button" class="btn btn-primary slide">Leer más  <i class="fa fa-caret-right"></i> </button>
+                    <a class="btn btn-primary slide text-success" href="./courses/">Leer más  <i class="fa fa-caret-right"></i> </a>
 
 
                 </div>
@@ -232,7 +232,7 @@
                                                     <!-- <li><strong>Basic</strong> Stats</li> -->
                                                 </ul>
                                                 <div class="pricing-signup">
-                                                    <a href="#" class="button color-5">Más información</a>
+                                                    <a href="./courses" class="button color-5">Más información</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -258,7 +258,7 @@
                                                     <!-- <li><b>Complex</b>&nbsp;Stats</li> -->
                                                 </ul>
                                                 <div class="pricing-signup">
-                                                    <a href="#" class="button color-5">Más información</a>
+                                                    <a href="./courses" class="button color-5">Más información</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -283,7 +283,7 @@
                                                     <li><b>10</b> años servicio particular</li>
                                                 </ul>
                                                 <div class="pricing-signup">
-                                                    <a href="#" class="button color-5">Más información</a>
+                                                    <a href="./courses" class="button color-5">Más información</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -314,9 +314,9 @@
                         <h4>Links Rápidos</h4>
                         <hr/>
                         <ul class="footer-links">
-                            <li><a href="#">Sobre Nosotros</a></li>
-                            <li><a href="#">Cursos</a></li>
-                            <li><a href="#">Contactenos</a></li>
+                            <li><a href="./about/">Sobre Nosotros</a></li>
+                            <li><a href="./courses/">Cursos</a></li>
+                            <li><a href="./contact/">Contactenos</a></li>
                         </ul>
                     </div>
                 </div>
@@ -328,8 +328,8 @@
                         <ul class="footer-links">
                             <li>Carrera 5 este Nº 6A - 08 </li>
                             <li>Portal del oriente Pitalito, Huila</li>
-                            <li>ceaelportal@gmail.com</li>
-                            <li>Cel. 310 2840995</li>
+                            <li><a href="mailto:ceaelportal@gmail.com">ceaelportal@gmail.com</a></li>
+                            <li><a href="tel:3102840995">Cel. 310 2840995</a></li>
                             <li>Tel. 8368545</li>
                         </ul>
                     </div>
